--- a/AboutSSA.html
+++ b/AboutSSA.html
@@ -4,12 +4,14 @@
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-112239346-1"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-112067889-1"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
 
         gtag('config', 'UA-112239346-1');
+        gtag('config', 'UA-112067889-1');
     </script>
 
 
@@ -124,14 +126,14 @@
             </div>
             <div class="aboutRight">
                 <p>
-                    The Smart Stove Alert is is game changer in kitchen safety. It detects dangerous situations of the stove before fire hazard occurs. 
+                    The Smart Stove Alert is is game changer in kitchen safety. It detects dangerous situations of the stove before fire hazard occurs.
                 <p>It has following specifications:</p>
-                    <ul>
-                        <li><span style="color: #f4511e;">Smart Monitor</span>: It monitors the entire stove surface for dangerous situations through a High Sensitivity / Low-Light camera which is powered by the 216 MHz ARM Cortex M7 processor</li>
-                        <li><span style="color: #f4511e;">Smart Power Shut Down</span>: It controls electrical or gas stoves. In unsafe conditions it does shut down the electrical power or gas supply in milliseconds to keep your family safe</li>
-                        <li><span style="color: #f4511e;"> Inter-Connectivity</span>: It's connected to the internet through its Atheros AR9331 Linux Processor with a clock speed of 400MHz. It can call your smartphone or emergency services</li>
-                        <li><span style="color: #f4511e;">Smart Learner</span>: It learns continuously and communicates with you through your smartphone. For example you can teach the Smart Stove Alert to authorize a person to operate the stove through face recognition</li>
-                    </ul>
+                <ul>
+                    <li><span style="color: #f4511e;">Smart Monitor</span>: It monitors the entire stove surface for dangerous situations through a High Sensitivity / Low-Light camera which is powered by the 216 MHz ARM Cortex M7 processor</li>
+                    <li><span style="color: #f4511e;">Smart Power Shut Down</span>: It controls electrical or gas stoves. In unsafe conditions it does shut down the electrical power or gas supply in milliseconds to keep your family safe</li>
+                    <li><span style="color: #f4511e;"> Inter-Connectivity</span>: It's connected to the internet through its Atheros AR9331 Linux Processor with a clock speed of 400MHz. It can call your smartphone or emergency services</li>
+                    <li><span style="color: #f4511e;">Smart Learner</span>: It learns continuously and communicates with you through your smartphone. For example you can teach the Smart Stove Alert to authorize a person to operate the stove through face recognition</li>
+                </ul>
                 </p>
             </div>
 
@@ -156,11 +158,11 @@
                             <form id="checkOutForm">
                                 <label class="cartLabel">First Name</label>
                                 <input id="fname" class="cartText" type="text" placeholder="Enter First Name" name="fname"
-                                       pattern="/\b([A-Z]{1}[a-z]{1,30}[- ]{0,1}|[A-Z]{1}[- \']{1}[A-Z]{0,1}  
+                                       pattern="/\b([A-Z]{1}[a-z]{1,30}[- ]{0,1}|[A-Z]{1}[- \']{1}[A-Z]{0,1}
     [a-z]{1,30}[- ]{0,1}|[a-z]{1,2}[ -\']{1}[A-Z]{1}[a-z]{1,30}){2,5}/" required />
                                 <label class="cartLabel">Last Name</label>
                                 <input id="lname" class="cartText" type="text" placeholder="Enter Last Name" name="lname"
-                                       pattern="/\b([A-Z]{1}[a-z]{1,30}[- ]{0,1}|[A-Z]{1}[- \']{1}[A-Z]{0,1}  
+                                       pattern="/\b([A-Z]{1}[a-z]{1,30}[- ]{0,1}|[A-Z]{1}[- \']{1}[A-Z]{0,1}
     [a-z]{1,30}[- ]{0,1}|[a-z]{1,2}[ -\']{1}[A-Z]{1}[a-z]{1,30}){2,5}/" required />
                                 <br />
                                 <br />
@@ -304,7 +306,7 @@
             </div>
         </footer>
 
-        
+
     </div>
 
     <script type="text/javascript" src="layout/scripts/smartstove.js"></script>
