--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-112239346-1"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-112067889-1"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
 
         gtag('config', 'UA-112239346-1');
+        gtag('config', 'UA-112067889-1');
     </script>
 
     <title>Smart Stove Alert</title>
